@@ -110,15 +110,15 @@
                 commonly used idiom is to assign a name to a 128-bit
                 ID using this macro:</para>
 
-                <programlisting>#define SD_MESSAGE_COREDUMP SD_ID128_MAKE(fc,2e,22,bc,6e,e6,47,b6,b9,07,29,ab,34,a2,50,b1)</programlisting>
+                <programlisting>#define SD_MESSAGE_TEST1 SD_ID128_MAKE(ee,89,be,71,bd,6e,43,d6,91,e6,c5,5d,eb,03,02,07)</programlisting>
 
                 <para><function>SD_ID128_CONST_STR()</function> may be
                 used to convert constant 128-bit IDs into constant
                 strings for output. The following example code will
                 output the string
-                "fc2e22bc6ee647b6b90729ab34a250b1":</para>
+                "ee89be71bd6e43d691e6c55deb030207":</para>
                 <programlisting>int main(int argc, char *argv[]) {
-        puts(SD_ID128_CONST_STR(SD_MESSAGE_COREDUMP));
+        puts(SD_ID128_CONST_STR(SD_MESSAGE_TEST1));
 }</programlisting>
 
                 <para><function>SD_ID128_FORMAT_STR</function> and
